# iqp

./: .gitignore  CMakeLists.txt  README.md  methodology.tex  paper.tex  ternent.bib  thompson.bib
MaintenanceWorkflow/: CMakeLists.txt  Data.cpp  Data.hpp  DevTeam.hpp  Instance.cpp  Instance.hpp  main.cpp
